--- a/example/config.yml
+++ b/example/config.yml
@@ -20,6 +20,14 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Title", name: "title", widget: "string", tagname: "h1"}
       - {label: "Publish Date", name: "date", widget: "datetime", format: "YYYY-MM-DD hh:mma"}
       - {label: "Cover Image", name: "image", widget: "image", required: false, tagname: ""}
+      - label: "FAQ"
+        name: "faq"
+        widget: "relation"
+        collection: "faq"
+        valueField: { type: "path" }
+        displayFields: ["title", {type: "path"}]
+        searchFields: ["title"]
+
       - {label: "Body", name: "body", widget: "markdown"}
     meta:
       - {label: "SEO Description", name: "description", widget: "text"}
